# nvim-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: CD.yaml  CI.yaml
PRPs/: README.md  mcp-server-implementation.STARTER.md  mcp-server-implementation.md  multi-connections.STARTER.md  multi-connections.md  nvim-api-integration.STARTER.md  nvim-api-integration.md  nvim-diagnostics-resources.STARTER.md  nvim-diagnostics-resources.md  universal-text-document-identifier.STARTER.md  universal-text-document-identifier.md
docs/: instructions.md
examples/: client.rs  client.rs.disabled
lua/nvim-mcp/: init.lua
src/: config.rs  config_test.rs  lib.rs  main.rs  test_utils.rs
src/neovim/: client.rs  connection.rs  error.rs  integration_tests.rs  mod.rs
src/neovim/lua/: diagnostics_autocmd.lua  lsp_client_get_code_actions.lua  lsp_definition.lua  lsp_document_symbols.lua  lsp_get_clients.lua  lsp_workspace_symbols.lua  navigate_to_file.lua
src/neovim/testdata/: cfg_lsp.lua  diagnostic_problems.lua
src/server/: core.rs  counter.rs  handler.rs  integration_tests.rs  mod.rs  neovim.rs  neovim_handler.rs  resources.rs  tools.rs
src/testdata/: cfg_lsp.lua
tests/: integration.rs  mcp_integration.rs  neovim_integration.rs
