[package]
name = "nvim-mcp"
version = "0.1.0"
edition = "2024"
description = "A stdio MCP server implementation using rmcp crate"
license = "MIT"

[dependencies]
# MCP Protocol Implementation
rmcp = { version = "0.3.0", features = [
  "transport-io",
  "transport-child-process",
  "client",
] }

# Async Runtime and Concurrency
tokio = { version = "1.0", features = ["full"] }

# Logging and Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error Handling
thiserror = "2.0"
