[package]
name = "nvim-mcp"
version = "0.4.0"
edition = "2024"
rust-version = "1.88.0"
description = "MCP server for Neovim"
documentation = "https://docs.rs/nvim-mcp"
homepage = "https://github.com/linw1995/nvim-mcp#readme"
repository = "https://github.com/linw1995/nvim-mcp"
readme = "README.md"
keywords = ["automation", "mcp", "neovim"]
categories = ["development-tools"]
license = "MIT"
include = [
  "/src",
  "/build.rs",
  "/docs/instructions.md",
  "/.packaged-commit",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]

[dependencies]
# Async Runtime and Concurrency
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Error Handling
thiserror = "2.0"

# Logging and Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# MCP Protocol Implementation
rmcp = { version = "0.5.0", features = [
  "transport-io",
  "transport-child-process",
  "client",
] }

# Neovim Integration
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
rmpv = "1.0"

# Serialization
serde = "1.0.219"
serde_json = "1.0.141"
schemars = "1.0"

# File System Operations
glob = "0.3"

# Multi-connection Support
dashmap = "6.1"
regex = "1.11"
blake3 = "1.5"

[dev-dependencies]
tracing-test = "0.2"
rand = "0.9.2"
tempfile = "3.0"

[build-dependencies]
chrono = { version = "0.4" }
